--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,11 @@
     "name": "IncidentNow Dev Environment",
     "image": "mcr.microsoft.com/devcontainers/java:21-bookworm",
     "features": {
+        "ghcr.io/devcontainers/features/java:1": {
+            "version": "none",
+            "installGradle": "true",
+            "installMaven": "true"
+        },
         "ghcr.io/devcontainers/features/node:1": {
             "version": "22",
             "installYarnUsingApt": false
